--- a/html/webapp/index.html
+++ b/html/webapp/index.html
@@ -10,7 +10,7 @@
 
        <body>
 
-       <a href="android-release-unsigned.apk">APK</a>
+       <a href="android-release-unsigned.apk"><span style="color: white;">DOWNLOAD APK</span></a>
 
        <br/>
        <br/>
