--- a/android/web/index.html
+++ b/android/web/index.html
@@ -7,7 +7,7 @@
 <body>
 
 
-<a href="android-release-unsigned.apk"><span style="font-size: 30px;">DOWNLOAD APK</span></a>
+<a href="android-release-signed.apk"><span style="font-size: 30px;">DOWNLOAD APK</span></a>
 
 
 </body>
